css/stylesheet.css
/*1) Parallax*/
/*2) General*/
/*3) Bootstrap*/
/*4) Honors, Employment*/
/*5) Courses*/
/*6) Skills*/




/*1) Parallax*/

.parallax-window {
    background: transparent;
    color: white;
    width: 100%;
}

@media (max-width: 960px){
	#head-window{
		height: 400px;
	}
}

@media (min-width: 961px){
	#head-window{
		height: 550px;
	}
}

/*.small-window{
	min-height: 375px;
}*/

p{
	background-color: #1C0B23;
	text-align: right;
	padding-right: 2rem;
}

a{
	margin-left: 20px;
	margin-right: 20px;
	margin-top: 10px;
}

i{
	color: #1C0B23;
}

.img-source a{
	color: #0bb3bf;
	background-color: #1C0B23;
}

@media (max-width: 768px){
	.img-source{
		margin-top: -10px;
	}
}

/*2) General*/

h1{
	text-align: center;
	padding-top: 8rem;	
	font-size: 70px;
}

footer, .row{
	color: white;
	font-size: 20px;
	margin-top: -10px;
	padding-top: 20px;
	padding-bottom: 20px;
}

#about{
	background-color: #1C0B23; 
}

#languages{
	background-color: #43324b;
	/*bright purple: #7c43bd;*/
	/*grey: #a49da7;*/
}

#projects{
	background-color: #766c7b;
	padding-bottom: 10px;

}

#contact{
	background-color: #e8e6e9;
	color: #1C0B23;

}

/*3) Bootstrap*/

@media (max-width: 810px) {
    .navbar-header {
        float: none;
    }
    .navbar-left,.navbar-right {
        float: none !important;
    }
    .navbar-toggle {
        display: block;
    }
    .navbar-collapse {
        border-top: 1px solid transparent;
        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
    }
    .navbar-fixed-top {
		top: 0;
		border-width: 0 0 1px;
	}
    .navbar-collapse.collapse {
        display: none!important;
    }
    .navbar-nav {
        float: none!important;
		margin-top: 7.5px;
	}
	.navbar-nav>li {
        float: none;
    }
    .navbar-nav>li>a {
        padding-top: 10px;
        padding-bottom: 10px;
    }
    .collapse.in{
  		display:block !important;
	}
}

.navbar-brand{
	text-align: left;
}

#nav{
	font-size: 20px;
	clear: both;
	width: 100%;
	height: 20%;
}

.dropdown ul li a{
	font-size: 20px;
	color: gray;
}

.project{
	
	margin-bottom: 10px;


}
/*.container{
	display: flex;
	flex-direction: row;
	flex-wrap: nowrap;

}     */


/*For help and credit: https://codepen.io/envincebal/full/BRvBOm/*/

.project-row, .icon-row {
    padding: 0 0 20px 0;
}


.project-image:hover {
    box-shadow: 6px 6px 6px -3px rgba(0,0,0,0.75);
}
.project-image {
    /*height: 100%;*/
    transform: scale(.8);
    transition: box-shadow 0.2s ease-in-out;
    cursor: pointer;
    margin-top: 5px;
}

.img-responsive{
    display: block;
    max-width: 100%;
    height: auto;
}

img {
    max-width: 100%;
    vertical-align: middle;
    border: 0;
}

.section-header {
    padding: 0 0 20px 0;
    font-size: 30px;
}

.profile-pic {
    border-radius: 100%;
    border: 5px solid;
    max-width: 230px;

    /*margin-right: 30px;*/

}

